# kde_diffusion

./: .gitignore  Cargo.toml  README.md
benches/: kde_1d.rs  kde_1d_py_reference.rs
src/: lib.rs
test/: generate_reference_densities.py
test/plots/: botev_01_claw.html  botev_02_strongly_skewed.html  botev_03_kurtotic_unimodal.html  botev_04_double_claw.html  botev_05_discrete_comb.html  botev_06_asymmetric_double_claw.html  botev_07_outlier.html  botev_08_separated_bimodal.html  botev_09_skewed_bimodal.html  botev_10_bimodal.html  kde1py_reference.html
test/reference_densities/: botev_01_claw.npz  botev_02_strongly_skewed.npz  botev_03_kurtotic_unimodal.npz  botev_04_double_claw.npz  botev_05_discrete_comb.npz  botev_06_asymmetric_double_claw.npz  botev_07_outlier.npz  botev_08_separated_bimodal.npz  botev_09_skewed_bimodal.npz  botev_10_bimodal.npz  botev_13_trimodal.npz  botev_14_five_modes.npz  botev_15_ten_modes.npz  botev_16_smooth_comb.npz
test/templates/: README.md  demo.html
webpage/: demo.html  index.html
webpage/benchmarks/double-claw/Throughput/0020k/base/: benchmark.json  raw.csv  tukey.json
webpage/benchmarks/double-claw/Throughput/0020k/new/: estimates.json  sample.json
webpage/benchmarks/double-claw/Throughput/0020k/report/: index.html
webpage/benchmarks/double-claw/Throughput/0040k/base/: benchmark.json
webpage/benchmarks/double-claw/Throughput/0040k/new/: estimates.json  raw.csv  sample.json  tukey.json
webpage/benchmarks/double-claw/Throughput/0040k/report/: index.html
webpage/benchmarks/double-claw/Throughput/0060k/base/: benchmark.json  raw.csv
webpage/benchmarks/double-claw/Throughput/0060k/new/: estimates.json  sample.json  (+1 more)
webpage/benchmarks/double-claw/Throughput/report/: index.html
webpage/benchmarks/double-claw/report/: index.html
(+43 files in other folders)
