[package]
name = "kde_diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = "0.10.0"
ndarray = "0.16.1"
argmin-observer-slog = "0.1.0"
rustdct = "0.7.1"

[dev-dependencies]
approx = "0.5.1"
ndarray-npy = "0.9.1"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
plotly = "0.12.0"
statrs = "0.18.0"
