[package]
name = "kde_diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
argmin = "0.10.0"
ndarray = "0.16.1"
argmin-observer-slog = "0.1.0"
rustdct = "0.7.1"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.3", features = ["html_reports"] }
ndarray-npy = "0.9.1"
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"] }
rand = "0.9.0"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
plotly = "0.12.0"
statrs = "0.18.0"
tera = "1.20.0"


[[bench]]
name = "kde_1d"
harness = false