[package]
name = "kde_diffusion"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "KDE using the Botev implementation of the diffusion method"
homepage = "https://github.com/tmbb/kde_diffusion/"
repository = "https://github.com/tmbb/kde_diffusion/"
readme = "readme.md"
keywords = ["kde", "statistics"]

[dependencies]
argmin = "0.10.0"
ndarray = "0.16.1"
ndarray-stats = "0.3.0"
rustdct = "0.7.1"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.3", features = ["html_reports"] }
ndarray-npy = "0.9.1"
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"] }
rand = "0.9"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
plotly = "0.12.0"
statrs = "0.18.0"
tera = "1.20.0"


[[bench]]
name = "kde_1d"
harness = false

[[bench]]
name = "kde_1d_py_reference"
harness = false